--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.44",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "dotenv": "^16.0.1",
     "firebase": "^9.6.10",
     "react": "^18.0.0",
@@ -24,6 +28,7 @@
     "sass": "^1.49.9",
     "stripe": "^9.8.0",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9"
   }
 }
