--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^17.0.44",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.6.10",
     "react": "^18.0.0",
@@ -28,6 +30,7 @@
     "sass": "^1.49.9",
     "stripe": "^9.8.0",
     "styled-components": "^5.3.5",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
